<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard_24"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_permissions"
            android:icon="@drawable/ic_shield_check_24"
            android:title="@string/menu_permissions" />
        <item
            android:id="@+id/nav_pins"
            android:icon="@drawable/ic_pin_24"
            android:title="@string/menu_pins" />
        <item
            android:id="@+id/nav_remote"
            android:icon="@drawable/ic_remote_24"
            android:title="@string/menu_remote" />
        <item
            android:id="@+id/nav_features"
            android:icon="@drawable/ic_features_24"
            android:title="@string/menu_features" />
    </group>

    <!-- New "Settings" and "About" Item Group -->
    <group android:id="@+id/group_other"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24"
            android:title="@string/menu_about" />
    </group>

</menu>